Camino only - Bug 412328: Use the correct font size for bold search menu items. r/sr=pink